# spec_manager

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-28-spec-manager-design.md
skills/spec-manager/: SKILL.md
spec_manager/: __init__.py  api.py  cli.py  config.py  db.py  diff.py  frontmatter.py  lifecycle.py  mcp_server.py  models.py  permissions.py  schemas.py  store.py  sync.py
spec_manager/ui/: app.js  filter.js  index.html  style.css
tests/: conftest.py  test_api.py  test_cli.py  test_db.py  test_diff.py  test_frontmatter.py  test_lifecycle.py  test_mcp.py  test_permissions.py  test_store.py  test_sync.py
tests-ui/: filter.test.cjs
