[project]
name = "spec-manager"
version = "0.1.0"
description = "Central, DB-backed spec manager accessible across projects via governed MCP tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
specm = "spec_manager.cli:console"
specm-mcp = "spec_manager.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]
